--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -34,11 +34,12 @@ console.log(returnSeven());
 function squareRoot(r){
   return Math.sqrt(r);
    }
-<<<<<<< HEAD
+
+   function returnArgument(param) {
+  return param;
+   }
 
 
-=======
->>>>>>> 886c2ed0181053aa2a57614c104f3840b53f9311
  </script>
 </body>
 </html>
