--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -6,12 +6,12 @@
 </head>
 <body>
  <script>
-   //write a javaScript function that takes in a number and multiplies by five
-  // function multiplyByFive(n) {
-   //  return n * 5;
-  // }
+   write a javaScript function that takes in a number and multiplies by five
+  function multiplyByFive(n) {
+    return n * 5;
+  }
 
-   //console.log(multiplyByFive(5));
+   console.log(multiplyByFive(5));
 
  function singHappyBirthday(name) {
     console.log("happy birthday to you");
@@ -35,21 +35,25 @@ function squareRoot(r){
   return Math.sqrt(r);
    }
 
+
+   console.log(squareRoot(100));
+
+
    function returnArgument(param) {
   return param;
    }
 
 
+   // Write a JS function that returns a string representing the type of the argument passed through it.
+
+function typeOfInput(input) {
+  return  typeof input;
+}
+console.log(typeOfInput(34));
+   console.log(typeOfInput(this));
+
  </script>
 </body>
 </html>
 
-<!--.box {
-    width: 50px
-    height: 50 px
-    padding: 10px 11px 12px 13px
-    border: 10px solid green
-    border-style: solid;
-    border-color
 
-}-->
