--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -47,10 +47,13 @@ function squareRoot(r){
    // Write a JS function that returns a string representing the type of the argument passed through it.
 
 function typeOfInput(input) {
-  return  typeof input;
+  return typeof input;
 }
 console.log(typeOfInput(34));
-   console.log(typeOfInput(this));
+   console.log(typeOfInput('this'));
+
+
+
 
  </script>
 </body>
