--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -52,7 +52,16 @@ function typeOfInput(input) {
 console.log(typeOfInput(34));
    console.log(typeOfInput('this'));
 
+//write a javascript function that returns the boolean true if the number passed through it
+   //is even
 
+
+   var isEven = function (n) {
+     return n % 2 === 0;
+   };
+
+   console.log(isEven(5));
+   console.log(isEven(6));
 
 
  </script>
