--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -10,7 +10,6 @@
   function multiplyByFive(n) {
     return n * 5;
   }
-
    console.log(multiplyByFive(5));
 
  function singHappyBirthday(name) {
@@ -63,6 +62,66 @@ console.log(typeOfInput(34));
    console.log(isEven(5));
    console.log(isEven(6));
 
+
+   Print the first ten even numbers at least 3 times
+   (preferably using different strategies)
+
+   console.log(2,4,6,8, 10, 12, 14, 16,18, 20);
+
+   console.log(2);
+   console.log(4);
+   console.log(6);
+   console.log(8);
+   console.log(10);
+   console.log(12);
+   console.log(14);
+   console.log(16);
+   console.log(18);
+   console.log(20);
+
+
+   var num = 2
+   console.log(num);
+   num += 2;
+   console.log(num);
+   num += 2;
+   console.log(num);
+   num += 2;
+   console.log(num);
+   num += 2;
+   console.log(num);
+   num += 2;
+   console.log(num);
+   num += 2;
+   console.log(num);
+   num += 2;
+   console.log(num);
+   num += 2;
+   console.log(num);
+   num += 2;
+   console.log(num);
+   num += 2;
+   console.log(num);
+   num += 2;
+   console.log(num);
+   num += 2;
+   console.log(num);
+   num += 2;
+   console.log(num);
+   num += 2;
+
+
+
+
+
+
+
+   function printEvens() {
+   for (var i = 1; i <=20; i++){
+      if (i % 2 ===0)
+     console.log(i);
+   }
+printEvens();
 
  </script>
 </body>
