--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -123,6 +123,18 @@ console.log(typeOfInput(34));
    }
 printEvens();
 
+
+
+     const countFromBy = countFromBy(num1, num2) {
+            console.log(num1);
+       console.log(num1 + num2);
+       console.log(num1 + 2 * num2);
+       console.log(num1 + 3 * num2);
+       console.log(num1 * 4 * num2);
+     }
+   }
+
+
  </script>
 </body>
 </html>
