--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -1,185 +1,232 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Morning Warmups</title>
+  <meta charset="UTF-8">
+  <title>Morning Warmups</title>
 </head>
 <body>
- <script>
-   write a javaScript function that takes in a number and multiplies by five
+<script>
+  write
+  a
+  javaScript
+
+  function that
+
+  takes in a
+  number
+  and
+  multiplies
+  by
+  five
+
   function multiplyByFive(n) {
     return n * 5;
   }
-   console.log(multiplyByFive(5));
 
- function singHappyBirthday(name) {
+  console.log(multiplyByFive(5));
+
+  function singHappyBirthday(name) {
     console.log("happy birthday to you");
     console.log("happy birthday to you");
     console.log("happy birthday Dear " + name);
     console.log("happy birthday to you!!!");
-   }
+  }
 
-   singHappyBirthday(Hyperion));
-
-
-
-//write a function that returns the number 7
-   function returnSeven() {
-     return 7;
-   }
-console.log(returnSeven());
+  singHappyBirthday(Hyperion)
+  )
+  ;
 
 
-function squareRoot(r){
-  return Math.sqrt(r);
-   }
+  //write a function that returns the number 7
+  function returnSeven() {
+    return 7;
+  }
+
+  console.log(returnSeven());
 
 
-   console.log(squareRoot(100));
+  function squareRoot(r) {
+    return Math.sqrt(r);
+  }
 
 
-   function returnArgument(param) {
-  return param;
-   }
+  console.log(squareRoot(100));
 
 
-   // Write a JS function that returns a string representing the type of the argument passed through it.
-
-function typeOfInput(input) {
-  return typeof input;
-}
-console.log(typeOfInput(34));
-   console.log(typeOfInput('this'));
-
-//write a javascript function that returns the boolean true if the number passed through it
-   //is even
+  function returnArgument(param) {
+    return param;
+  }
 
 
-   var isEven = function (n) {
-     return n % 2 === 0;
-   };
+  // Write a JS function that returns a string representing the type of the argument passed through it.
 
-   console.log(isEven(5));
-   console.log(isEven(6));
+  function typeOfInput(input) {
+    return typeof input;
+  }
 
+  console.log(typeOfInput(34));
+  console.log(typeOfInput('this'));
 
-   Print the first ten even numbers at least 3 times
-   (preferably using different strategies)
-
-   console.log(2,4,6,8, 10, 12, 14, 16,18, 20);
-
-   console.log(2);
-   console.log(4);
-   console.log(6);
-   console.log(8);
-   console.log(10);
-   console.log(12);
-   console.log(14);
-   console.log(16);
-   console.log(18);
-   console.log(20);
+  //write a javascript function that returns the boolean true if the number passed through it
+  //is even
 
 
-   var num = 2
-   console.log(num);
-   num += 2;
-   console.log(num);
-   num += 2;
-   console.log(num);
-   num += 2;
-   console.log(num);
-   num += 2;
-   console.log(num);
-   num += 2;
-   console.log(num);
-   num += 2;
-   console.log(num);
-   num += 2;
-   console.log(num);
-   num += 2;
-   console.log(num);
-   num += 2;
-   console.log(num);
-   num += 2;
-   console.log(num);
-   num += 2;
-   console.log(num);
-   num += 2;
-   console.log(num);
-   num += 2;
-   console.log(num);
-   num += 2;
+  var isEven = function (n) {
+    return n % 2 === 0;
+  };
+
+  console.log(isEven(5));
+  console.log(isEven(6));
+
+
+  Print
+  the
+  first
+  ten
+  even
+  numbers
+  at
+  least
+  3
+  times
+  (preferably
+  using
+  different
+  strategies
+  )
+
+  console.log(2, 4, 6, 8, 10, 12, 14, 16, 18, 20);
+
+  console.log(2);
+  console.log(4);
+  console.log(6);
+  console.log(8);
+  console.log(10);
+  console.log(12);
+  console.log(14);
+  console.log(16);
+  console.log(18);
+  console.log(20);
+
+
+  var num = 2
+  console.log(num);
+  num += 2;
+  console.log(num);
+  num += 2;
+  console.log(num);
+  num += 2;
+  console.log(num);
+  num += 2;
+  console.log(num);
+  num += 2;
+  console.log(num);
+  num += 2;
+  console.log(num);
+  num += 2;
+  console.log(num);
+  num += 2;
+  console.log(num);
+  num += 2;
+  console.log(num);
+  num += 2;
+  console.log(num);
+  num += 2;
+  console.log(num);
+  num += 2;
+  console.log(num);
+  num += 2;
+  console.log(num);
+  num += 2;
+
+
+  function printEvens() {
+    for (var i = 1; i <= 20; i++) {
+      if (i % 2 === 0)
+        console.log(i);
+    }
+    printEvens();
+
+
+    const countFromBy = countFromBy(num1, num2)
+    {
+      console.log(num1);
+      console.log(num1 + num2);
+      console.log(num1 + 2 * num2);
+      console.log(num1 + 3 * num2);
+      console.log(num1 * 4 * num2);
+    }
+  }
+
+
+  function magic8Ball(number) {
+    var magic8Ball = 0;
+    switch (number) {
+      case 1:
+
+        return ("As I see it, yes");
+
+      case 2:
+
+        return ("Ask again later");
+
+      case 3:
+
+        return ("Better not tell you now");
+
+      case 4:
+
+        return ("cannot predict now");
+
+      case 5:
+
+        return ("concentrate and as again");
+
+      case 6:
+
+        return ("dont count on it");
+
+      case 7:
+
+        return ("Outlook not so good");
+
+
+      case 8:
+
+        return ("outlook is good");
+    }
+  }
+
+  let number = Math.floor(Math.random() * 8);
+  magic8Ball(number);
 
 
 
+ // write a js function that modifies a variable called togglelights. if the lights are on, turn them off.
+ //
+ //
+ //  function toggleLights(x) {
+ //    if (x === "on") {
+ //      alert("lights off");
+ //    } else (x === "off"); {
+ //      alert("lights on");
+ //    }
+ //  }
+  let lights = "on";
+  let lightSwitch = function() {
+    if (lights === "on") {
+      lights = "off"
+    } else {
+      lights = "on"
+    }
+  }
+  console.log("the lights are " + lights);
+  lightSwitch();
+  console.log("the lights are now " +lights);
 
 
 
-
-   function printEvens() {
-   for (var i = 1; i <=20; i++){
-      if (i % 2 ===0)
-     console.log(i);
-   }
-printEvens();
-
-
-
-     const countFromBy = countFromBy(num1, num2) {
-            console.log(num1);
-       console.log(num1 + num2);
-       console.log(num1 + 2 * num2);
-       console.log(num1 + 3 * num2);
-       console.log(num1 * 4 * num2);
-     }
-   }
-
-
-
-
-
-   function magic8Ball(number) {
-     var magic8Ball = 0;
-     switch (number) {
-       case 1:
-
-         return("As I see it, yes");
-
-       case 2:
-
-         return("Ask again later");
-
-       case 3:
-
-         return("Better not tell you now");
-
-       case 4:
-
-         return("cannot predict now");
-
-       case 5:
-
-         return("concentrate and as again");
-
-       case 6:
-
-         return("dont count on it");
-
-       case 7:
-
-         return("Outlook not so good");
-
-
-       case 8:
-
-         return("outlook is good");
-     }
-   }
-
-   let number = Math.floor(Math.random() * 8);
-   magic8Ball(number);
-
- </script>
+</script>
 </body>
 </html>
 
