morning loop pushup

--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -211,21 +211,35 @@
  //    } else (x === "off"); {
  //      alert("lights on");
  //    }
+ // //  }
+ //  let lights = "on";
+ //  let lightSwitch = function() {
+ //    if (lights === "on") {
+ //      lights = "off"
+ //    } else {
+ //      lights = "on"
+ //    }
  //  }
-  let lights = "on";
-  let lightSwitch = function() {
-    if (lights === "on") {
-      lights = "off"
-    } else {
-      lights = "on"
-    }
-  }
-  console.log("the lights are " + lights);
-  lightSwitch();
-  console.log("the lights are now " +lights);
+ //  console.log("the lights are " + lights);
+ //  lightSwitch();
+ //  console.log("the lights are now " +lights);
 
+  //
+  //
+  //
+  //
+  // var countTo10 = function() {
+  //   var num = 1;
+  //   while (num <= 10) {
+  //     if (num % 2 === 0) {
+  //       console.log(num + " is even")
+  //     } else {
+  //       console.log( num + " is odd")
+  //     }
+  //     num++;
+  //   }}
 
-
+  countTo10()
 </script>
 </body>
 </html>
