--- a/boilerplate.html
+++ b/boilerplate.html
@@ -46,6 +46,19 @@ function twoParameterFunction(thing, index) {
     alert('the thing at index ' + index + ' is ' + thing + '.');
   }
 
+
+
+let array = [ "monday", "tuesday", "wednesday", "thursday", "friday",]
+
+  console.log(array.length);
+  console.log(array.unshift("sunday"));
+  console.log(array.push("saturday"));
+  array.forEach(function(day){
+    console.log(day);
+});
+  console.log(array.length);
+
+
 </script>
 </body>
 </html>
