--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -239,7 +239,29 @@
   //     num++;
   //   }}
 
-  countTo10()
+ // countTo10()
+
+
+  //return a string where each character is repeated once (case sensitive)
+
+  //
+  // function doubleChar(s) {
+  //   console.log(
+  //     s.split('').map(function (v) {
+  //       return v + v;
+  //     }).join('')
+  //   )
+  // }
+
+  function doubleChar(str){
+    let returnString = "";
+
+    for (let i = 0; i < str.length; i++ ) {
+      returnString += str[i] + str[i];
+      console.log(returnString);
+    }
+  }
+
 </script>
 </body>
 </html>
