--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -78,22 +78,22 @@
   console.log(isEven(5));
   console.log(isEven(6));
 
-
-  Print
-  the
-  first
-  ten
-  even
-  numbers
-  at
-  least
-  3
-  times
-  (preferably
-  using
-  different
-  strategies
-  )
+  //
+  // Print
+  // the
+  // first
+  // ten
+  // even
+  // numbers
+  // at
+  // least
+  // 3
+  // times
+  // (preferably
+  // using
+  // different
+  // strategies
+  // )
 
   console.log(2, 4, 6, 8, 10, 12, 14, 16, 18, 20);
 
