--- a/loops.html
+++ b/loops.html
@@ -7,6 +7,6 @@
 
 <script src="js/for_loops.js"></script>
 <script src="js/break_and_continue.js"></script>
-<script src="while.js"></script>
+<script src="js/vendor/while.js"></script>
 </body>
 </html>
