--- a/welcome.html
+++ b/welcome.html
@@ -7,10 +7,10 @@
   <a name="top"></a>
     <meta charset="UTF-8">
     <title>Veridian Dynamics</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/style.css">
 
 
   <h1 class="fancy-header"> Welcome to Veridian Dyamics!</h1>
