--- a/boilerplate.html
+++ b/boilerplate.html
@@ -36,7 +36,7 @@
 
 
 
-  console.log(document.getElementbyId(id))
+  console.log(document.getElementById(id))
   "use strict";
   (function() {
     // Get all elements with class 'even'
