--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -54,8 +54,9 @@
     subHeader.setAttribute('style', 'color: blue');
     // TODO: Uncomment the next line and get all list items
     // var listItems = ;
-
+var x = document.getElementById("ul");
     // TODO: Set text color on every other list item to grey
+
     // TODO: Set text color of li with dbid = 1 to blue
 
     // TODO: Uncomment the next line and get all elements with class name sub-paragraph
