--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -27,7 +26,6 @@
 </p>
 
 
-
 <!--<div id="demo1">I didn't put any text.</div>-->
 <!--<div id="demo2" >That makes it hard to see.</div>-->
 <!--<div>Last div</div>-->
@@ -41,10 +39,10 @@
 <!--  })();-->
 <!--</script>-->
 <script>
-  (function() {
+  (function () {
     "use strict";
     // TODO: Uncomment next line and get the main header element by id
-     var mainHeader = document.getElementById("main-header");
+    var mainHeader = document.getElementById("main-header");
     // TODO: Set inner html of mainHeader to "JavaScript is Cool"
 
     // TODO: Uncomment the next line and get the sub header element by id
@@ -54,15 +52,24 @@
     subHeader.setAttribute('style', 'color: blue');
     // TODO: Uncomment the next line and get all list items
     // var listItems = ;
-var x = document.getElementById("ul");
+    var x = document.getElementById("ul");
     // TODO: Set text color on every other list item to grey
-
+    for (let i = 0; i < listItems.length; i++) {
+      if (i % 2 !== 0) {
+        listItems[i].setAttribute('style', 'color: grey');
+      }
+    }
     // TODO: Set text color of li with dbid = 1 to blue
 
     // TODO: Uncomment the next line and get all elements with class name sub-paragraph
     // var subParagraphs = ;
 
+    var subParagraphs = document.getElementsByClassName('sub-paragraph');
+    console.log(subParagraphs) // display an array of subParagraphs (4)
+
     // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
+
+    subParagraphs[0].innerHTML = "<em>Mission Accomplished!</em>"
   })();
 </script>
 </body>
