--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -25,26 +25,19 @@
   culpa qui officia deserunt mollit anim id est laborum.
 </p>
 
+<h2 id="buttons">buttons!</h2>
+<button id="btn1">Button 1</button>
+<button id="btn2">Button 2</button>
+<button id="btn3">Button 3</button>
+<button id="btn4">Button 4</button>
 
-<!--<div id="demo1">I didn't put any text.</div>-->
-<!--<div id="demo2" >That makes it hard to see.</div>-->
-<!--<div>Last div</div>-->
-<!--<script>-->
-<!--  "use strict";-->
-<!--  (function() {-->
-<!--    var div1 = document.getElementById('demo1');-->
-<!--    div1.style['background-color'] = 'red';-->
-<!--    var divs = document.getElementsByTagName('div');-->
-<!--    divs[1].style['background-color'] = 'blue';-->
-<!--  })();-->
-<!--</script>-->
 <script>
   (function() {
     "use strict";
     // TODO: Uncomment next line and get the main header element by id
     var mainHeader = document.getElementById('main-header');
     // TODO: Set inner html of mainHeader to "JavaScript is Cool"
-    mainHeader.innerText = 'JavaScript is Cool';
+    mainHeader.innerText = 'JavaScript is ok';
     // TODO: Uncomment the next line and get the sub header element by id
     var subHeader = document.getElementById('sub-header');
     // TODO: Set the text color of subHeader to blue
@@ -68,6 +61,28 @@
     // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
     subParagraphs[0].innerHTML = 'Mission Accomplished!';
   })();
+
+ // Add 4 buttons to the page
+
+  // create a handler function
+  // var listener = function (event) {
+  //   alert('You clicked the button!');
+  // }
+  //
+  // document.getElementById('btn1').addEventListener('click', listener);
+  // mainHeader.innerText = 'JavaScript is Cool';
+
+
+  // TODO: Uncomment next line and get the main header element by id
+  var mainHeader = document.getElementById("main-header");
+  // TODO: Set inner html of mainHeader to "JavaScript is Cool"
+  function button1 (){
+    mainHeader.innerHTML = "JavaScript is Cool";
+  };
+  document.getElementById("btn1").addEventListener("click", button1);
 </script>
-</body>
+
+
+
+  </body>
 </html>
