dom query js part 2

--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -80,6 +80,26 @@
     mainHeader.innerHTML = "JavaScript is Cool";
   };
   document.getElementById("btn1").addEventListener("click", button1);
+
+  // TODO: Uncomment next line and get the main header element by id
+  var mainHeader = document.getElementById("main-header");
+  // TODO: Set inner html of mainHeader to "JavaScript is ok"
+  function button2 (){
+    mainHeader.innerHTML = "JavaScript is ok";
+  };
+  document.getElementById("btn2").addEventListener("click", button2);
+
+
+  // TODO: Uncomment next line and get the main header element by id
+  var mainHeader = document.getElementById("main-header");
+  // TODO: Set inner html of mainHeader to "JavaScript is ok"
+  function button2 (){
+    mainHeader.innerHTML = "JavaScript is ok";
+  };
+  document.getElementById("btn2").removeEventListener("click", button2);
+
+
+
 </script>
 
 
