--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -90,13 +90,24 @@
   document.getElementById("btn2").addEventListener("click", button2);
 
 
+
+
   // TODO: Uncomment next line and get the main header element by id
   var mainHeader = document.getElementById("main-header");
   // TODO: Set inner html of mainHeader to "JavaScript is ok"
-  function button2 (){
-    mainHeader.innerHTML = "JavaScript is ok";
+  function button3 (){
+    mainHeader.innerHTML = "JavaScript is marvelous!!!";
   };
-  document.getElementById("btn2").removeEventListener("click", button2);
+  document.getElementById("btn3").addEventListener("click", button3);
+
+
+  // TODO: Uncomment next line and get the main header element by id
+  var mainHeader = document.getElementById("main-header");
+  // TODO: Set inner html of mainHeader to "JavaScript is ok"
+  function button4 (){
+    mainHeader.innerHTML = "JavaScript is a thing we use";
+  };
+  document.getElementById("btn4").addEventListener("click", button4);
 
 
 
