--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -266,6 +266,25 @@
 
 
 
+  var fibonacci = function (n) {
+    if (n === 1) {
+      return [0, 1];
+    } else {
+      var s = fibonacci(n - 1);
+      s.push(s[s.length - 1] + s[s.length - 2]);
+      return s;
+    }
+  };
+
+
+  function isolateTensDigit(int){
+    int %= 100;
+    int /= 10;
+    int = Math.floor(int);
+    return int
+  }
+  console.log(isolateTensDigit(345));
+
 
 </script>
 
