--- a/jquery_exercises.html..html
+++ b/jquery_exercises.html..html
@@ -6,8 +6,64 @@
 </head>
 <body>
 <h1>We are learning jQuery in 2020!</h1>
-<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/my-custom-javascript.js"></script>"
+
+
+<p>this is some font hi</p>
+
+
+<h1>Example Page</h1>
+<div class="important">
+  <h3>NOTICE</h3>
+  <p>This is an important message!</p>
+</div>
+<div class="not-important">
+  <h2>Lorem Ipsum</h2>
+  <p>
+    Freude, schöner Götterfunken,
+    Tochter aus Elysium,
+    Wir betreten feuertrunken,
+    Himmlische, dein Heiligtum!
+    Deine Zauber binden wieder,
+    Was die Mode streng geteilt;
+    Alle Menschen werden Brüder,
+    Wo dein sanfter Flügel weilt. <span class="important">Freude, schöner Götterfunken,
+Tochter aus Elysium,
+Wir betreten feuertrunken,
+Himmlische, dein Heiligtum!
+Deine Zauber binden wieder,
+Was die Mode streng geteilt;
+Alle Menschen werden Brüder,Freude, schöner Götterfunken,
+Tochter aus Elysium,
+Wir betreten feuertrunken,
+Himmlische, dein Heiligtum!
+Deine Zauber binden wieder,
+Was die Mode streng geteilt;
+Alle Menschen werden Brüder,
+Wo dein sanfter Flügel weilt.quis ut aliquip ex ea commodo.
+  </p>
+</div>
+<p class="important">This is also very important.</p>
+
+<script>
+
+  $(document).ready(function () { 
+    alert("Ready to go!")     })
+
+
+  $('p').css('font-size', '20px');
+
+
+  $('.important').css('background-color', 'yellow');
+
+
+
+</script>
+
+
 </body>
 </html>
