--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -294,6 +294,26 @@
 
 
 
+  //
+  // var nonSortedArray = ['hi', 'yo', 'whatup', 'bye', 'lol', 10];
+  // var reverseSortedArray = nonSortedArray.sort(function (a, b) {
+  //   if (a > b) return -1;
+  //   if (typeof reverseSortedArray != 'string' ) return null;
+  //   else if (a < b) return 1;
+  //   return 0;
+  // });
+  // console.log(reverseSortedArray);
+
+  function reverseAlphaArray(arr) {
+    for (let j =0; j<arr.length; j++) {
+      if(typeof arr[j] !== "string") {
+        return null;
+      }
+    }
+  return arr.sort().reverse();
+
+  }
+
 
 </script>
 
