--- a/jquery_exercises.html..html
+++ b/jquery_exercises.html..html
@@ -31,7 +31,7 @@
     Deine Zauber binden wieder,
     Was die Mode streng geteilt;
     Alle Menschen werden Brüder,
-    Wo dein sanfter Flügel weilt. <span class="codeup">Freude, schöner Götterfunken,
+    Wo dein sanfter Flügel weilt. Freude, schöner Götterfunken,
 Tochter aus Elysium,
 Wir betreten feuertrunken,
 Himmlische, dein Heiligtum!
@@ -54,28 +54,116 @@ Wo dein sanfter Flügel weilt.quis ut aliquip ex ea commodo.
 <li> Freude!</li>
 <li> Freude!</li>
 <li> Freude!</li></ul>
-<script>
+
+
+  <h1>Symphony No. 9</h1>
+  <ul class="codeup">
+    <li> Freude!</li>
+  <li> Freude!</li>
+  <li> Freude!</li>
+  <li> Freude!</li></ul>
+
+
+
+<h1>Symphony No. 9</h1>
+<ul class="codeup">
+  <li> Freude!</li>
+  <li> Freude!</li>
+  <li> Freude!</li>
+  <li> Freude!</li></ul>
+
+
+
+<h1>Symphony No. 9</h1>
+<ul class="codeup">
+  <li> Freude!</li>
+  <li> Freude!</li>
+  <li> Freude!</li>
+  <li> Freude!</li></ul>
+
+
+
+<h1>Symphony No. 9</h1>
+<ul class="codeup">
+  <li> Freude!</li>
+  <li> Freude!</li>
+  <li> Freude!</li>
+  <li> Freude!</li></ul>
+
+
+
+<h1>Symphony No. 9</h1>
+<ul class="codeup">
+  <li> Freude!</li>
+  <li> Freude!</li>
+  <li> Freude!</li>
+  <li> Freude!</li></ul>
+
+
+<h1>Symphony No. 9</h1>
+  <ul class="codeup">
+    <li class="coffee"> Freude!</li>
+  <li> Freude!</li>
+  <li> Freude!</li>
+  <li> Freude!</li></ul>
+  <script>
 //Create content in your HTML file using at least the following elements: h1, p, ul, li, div.
 
 
-  $(document).ready(function () { 
-    alert("Ready to go!")     })
+
+    $(document).ready(function() {
+      $("h1").on({
+        mouseenter: function () {
+          $(this).css("background-color", "lightgray");
+        },
+        mouseleave: function () {
+          $(this).css("background-color", "lightblue");
+        },
+        click: function () {
+          $(this).css("background-color", "yellow");
+        }
+      });
+
+        $("p").on({
+          dblclick: function () {
+            $(this).css("font-size", "18px");
+          }
+
+        })
 
 
-$('p, div').css('font-size', '32px');
+      $("li").on({
+        mouseenter: function () {
+          $(this).css("background-color", "red");
+        }
+
+      })
+      });
 
 
-$('li').css('font-size', '20px');
+      //
+      // $('p').on({
+      //   dblclick:
+        // $('#coffee').html
+  //
 
 
-  $('.codeup').css('background-color', 'red', 'color', 'green');
+    //
+    // $('p, div').css('font-size', '32px');
+    //
+    //
+    // $('li').css('font-size', '20px');
+    //
+    //
+    // $('.codeup').css('background-color', 'red', 'color', 'green');
+    //
+    //
+    // $('h1, p, li').css('background-color', 'blue',);
+    //
+    //
+    // $(document).ready(function () {
+    //   alert("moar stuff")
 
-
-$('h1, p, li').css('background-color', 'blue', );
-
-
-$(document).ready(function () {
-  alert("moar stuff")     })
 
 //$('*').css('border', '1px solid #F00');// all selector *
 
