--- a/konami.html
+++ b/konami.html
@@ -1,53 +1,91 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+  <h1>Bepis for Cheems</h1>
+
+
 <head>
-  <title>Konami Code</title>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="js/jquery.js"></script>
+  <script type="text/javascript" src="js/my-custom-javascript.js"></script>
+
+
+  <meta charset="UTF-8">
+  <title>Keyboard Events in jQuery</title>
+
+
+
 </head>
 <body>
-<h1>Konami Code</h1>
-<img alt="a" src="Delorean.jpg" />
-<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-<script type="text/javascript" src="js/jquery.js"></script>
-<script type="text/javascript" src="js/my-custom-javascript.js"></script>"
-<script src="sounds.js" type="text/javascript"></script>
 
-<script src="/js/jquery.js"></script>
+<div id="slideshow">
+  <img class="slide" src="img/dogewantbepis.jpeg" />
+  <img class="slide" src="img/deliveryboiforgotbepis.jpg" />
+  <img class="slide" src="img/triggered.webp" />
+  <img class="slide" src="img/protecattack.jpg" />
+  <img class="slide" src="img/26cyn25xja051.jpg" />
+</div>
+
+
+
 <script>
-  "use strict";
 
-  function konami(fn) {
-    var input = "";
-    var pattern = "3838404037393739666513";
-    $(document).keydown(function(e) {
-      input += e.keyCode;
-      if (input.indexOf(pattern) !== -1) {
-        fn();
-        input = "";
+  /*global $,jQuery,console,window*/
+  (function ($) {
+    "use strict";
+    var slideshow = (function () {
+      var counter = 0,
+        i,
+        j,
+        slides =  $("#slideshow .slide"),
+        slidesLen = slides.length - 1;
+      for (i = 0, j = 9999; i < slides.length; i += 1, j -= 1) {
+        $(slides[i]).css("z-index", j);
       }
+      return {
+        startSlideshow: function () {
+          window.setInterval(function () {
+            if (counter === 0) {
+              slides.eq(counter).fadeOut();
+              counter += 1;
+            } else if (counter === slidesLen) {
+              counter = 0;
+              slides.eq(counter).fadeIn(function () {
+                slides.fadeIn();
+              });
+            } else {
+              slides.eq(counter).fadeOut();
+              counter += 1;
+            }
+          }, 6000);
+        }
+      };
+    }());
+    slideshow.startSlideshow();
+  }(jQuery));
+
+
+
+
+
+  function onKonamiCode(cb) {
+    var input = '';
+    var key = '3838404037393739666513';
+    document.addEventListener('keydown', function (e) {
+      input += ("" + e.keyCode);
+      if (input === key) {
+        return cb();
+      }
+      if (!key.indexOf(input)) return;
+      input = ("" + e.keyCode);
     });
   }
 
-  $(document).ready(function() {
-    konami(function() {
-      alert("You added 30 lives!");
-    });
-  });
-
-  $(document).keyup(function(event){
-    console.log(event.keyCode);
-  });
+  onKonamiCode(function () {alert('30 lives!')})
 
 
-  $(document).ready(function(){
-    var letters = "abcdefghijklmnopqrstuvwxyz";
-    letters = letters.split("");
 
-    $(window).keydown(function(e){
-      key = e.which - 38; //makes a-z = 0-27
-      key = letters[key];
-      $('img[src="' + key + '.jpg"]').show();
-    });
-  });
 </script>
 </body>
 </html>
