--- a/konami.html
+++ b/konami.html
@@ -1,73 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <h1>Bepis for Cheems</h1>
+<h1>Bepis for Cheems</h1>
 
 
 <head>
+  <audio id="audio" controls style="display:none">
+    <source src=".idea/Mario-coin-sound" type="audio/mpeg">
+  </audio>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+          integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="js/jquery.js"></script>
   <script type="text/javascript" src="js/my-custom-javascript.js"></script>
 
 
   <meta charset="UTF-8">
   <title>Keyboard Events in jQuery</title>
-
+  <link rel="stylesheet" href="css/konamistyle.css">
 
 
 </head>
 <body>
+<div class="slideshow-container">
 
-<div id="slideshow">
-  <img class="slide" src="img/dogewantbepis.jpeg" />
-  <img class="slide" src="img/deliveryboiforgotbepis.jpg" />
-  <img class="slide" src="img/triggered.webp" />
-  <img class="slide" src="img/protecattack.jpg" />
-  <img class="slide" src="img/26cyn25xja051.jpg" />
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 6</div>
+    <img src="img/26cyn25xja051.jpg" style="width:50%">
+    <div class="text">Doge play chess with cheems</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 6</div>
+    <img src="img/bepis.png" style="width:50%">
+    <div class="text">As you may well know, Doge love Bepis. They order pizza with Bepis.</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 6</div>
+    <img src="img/deliveryboiforgotbepis.jpg" style="width:50%">
+    <div class="text">Oh hecc, delivery boi forgot the bepis</div>
+  </div>
+
+
+  <div class="mySlides fade">
+    <div class="numbertext">4 / 6</div>
+    <img src="img/triggered.webp" style="width:50%">
+    <div class="text">Oh Now you done it. Shibe is Triggered!!</div>
+  </div>
+
+
+  <div class="mySlides fade">
+    <div class="numbertext">5 / 6</div>
+    <img src="img/protecattack.jpg" style="width:50%">
+    <div class="text">Armed to the teeth, delivery boy is sent back to retrieve the bepis</div>
+  </div>
+
+
+  <div class="mySlides fade">
+    <div class="numbertext">6 / 6</div>
+    <img src="img/drinkbepis.jpeg" style="width:50%">
+    <div class="text">The End</div>
+  </div>
+
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+</div>
+<br>
+
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
 </div>
 
 
-
 <script>
-
-  /*global $,jQuery,console,window*/
-  (function ($) {
-    "use strict";
-    var slideshow = (function () {
-      var counter = 0,
-        i,
-        j,
-        slides =  $("#slideshow .slide"),
-        slidesLen = slides.length - 1;
-      for (i = 0, j = 9999; i < slides.length; i += 1, j -= 1) {
-        $(slides[i]).css("z-index", j);
-      }
-      return {
-        startSlideshow: function () {
-          window.setInterval(function () {
-            if (counter === 0) {
-              slides.eq(counter).fadeOut();
-              counter += 1;
-            } else if (counter === slidesLen) {
-              counter = 0;
-              slides.eq(counter).fadeIn(function () {
-                slides.fadeIn();
-              });
-            } else {
-              slides.eq(counter).fadeOut();
-              counter += 1;
-            }
-          }, 6000);
-        }
-      };
-    }());
-    slideshow.startSlideshow();
-  }(jQuery));
-
-
-
-
+  document.addEventListener('keydown', function(e) {
+    if (e.keyCode == 38) {
+      document.getElementById('audio').play();
+    }
+  });
 
   function onKonamiCode(cb) {
     var input = '';
@@ -76,14 +92,50 @@
       input += ("" + e.keyCode);
       if (input === key) {
         return cb();
+
+
       }
       if (!key.indexOf(input)) return;
       input = ("" + e.keyCode);
     });
   }
 
-  onKonamiCode(function () {alert('30 lives!')})
+  onKonamiCode(function () {
+    alert('30 lives!')
+  })
 
+
+  var slideIndex = 1;
+  showSlides(slideIndex);
+
+  function plusSlides(n) {
+    showSlides(slideIndex += n);
+  }
+
+  function currentSlide(n) {
+    showSlides(slideIndex = n);
+  }
+
+  function showSlides(n) {
+    var i;
+    var slides = document.getElementsByClassName("mySlides");
+    var dots = document.getElementsByClassName("dot");
+    if (n > slides.length) {
+      slideIndex = 1
+    }
+    if (n < 1) {
+      slideIndex = slides.length
+    }
+    for (i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none";
+    }
+    for (i = 0; i < dots.length; i++) {
+      dots[i].className = dots[i].className.replace(" active", "");
+    }
+    slides[slideIndex - 1].style.display = "block";
+    dots[slideIndex - 1].className += " active";
+
+  }
 
 
 </script>
