--- a/query_faq.html
+++ b/query_faq.html
@@ -191,7 +191,7 @@
   $('main')
     .prepend('<h1>YOSEMITE </h1>')
     .append('<img src="img/yosemite2.png" alt="yosemite" style="display: inline-block"> <dt>this</dt><dd>explaination</dd>')
-    .prepend('<h1>ROCKY MOUNTAIN NATIONAL PARK</h1>')
+    // .prepend('<h1>ROCKY MOUNTAIN NATIONAL PARK</h1>')
 
 
     .append('<img src="img/valley.jpg" alt="Rocky Mountain" style="display: inline-block"> <dt>this</dt><dd>explaination</dd>')
